  * Gmean will now report NA whenever there is a negative value in vector x, 
    despite if x also contains zero (like SAS, unlike SPSS).
  * Quantile() now uses the argument "names", which so far had no 
    meaning within the function body. 
  * PlotCorr() now displays the matrix in the same form, as it is defined.
    x is internally transposed.
  
BUGFIXES:
  * JonckheereTest's formula interface will now also support additional 
    arguments.
  * Bug in Cohen Kappa SE calculation fixed.  
  * Quantile's default type has been changed from type 5 to type 7, 
    which was documented, but not implemented.
  * PlotCorr() mislabeled the legend when breaks were specified (Credits for the
    fix to Duncan Murdoch).  
  * Several replacements of T with TRUE, which have apparently always 
    slipped through until now. (Again, the credit goes to Duncan Murdoch.)
  




DescTools 0.99.44 (2021-11-22)  
------------------------------

NEW FUNCTIONS ADDED:
  * PlotProbDist() is a convenience interface for plotting probability 
    distributions with shaded areas.
  * rSum21() returns random numbers which sum to 1, allowing to define digits.  

UPDATED FUNCTIONS:
  * Recode() will accept characters and in this case also return a character vector.
  * BarText() will also support stacked barplots for naming the groups.  
  
BUGFIXES:
  * AUC() did not handle missing values correctly. (Credits to Denise Horn-Oudshoorn)




DescTools 0.99.43 (2021-09-08)  
------------------------------

UPDATED FUNCTIONS:
  * An adaptation to a change in the function exact.test, used in 
    BarnardTest(). (Credits to Peter Calhoun)
  
BUGFIXES:
  * Main title in PlotQQ was not updated correctly.
  * Stuart-Maxwell test would not have stated the perfect agreement correctly.
    (Credits to Yusef Al-Naher)




DescTools 0.99.42 (2021-06-16)
------------------------------

NEW FUNCTIONS ADDED:
  * PlotDotCI() is a convenience interface for PlotDot() to plot group-wise 