@@ -19,6 +19,14 @@ UPDATED FUNCTIONS:
     meaning within the function body. 
   * PlotCorr() now displays the matrix in the same form, as it is defined.
     x is internally transposed.
+  * In Desc.table() the Phi coefficient has been replaced by Kendall Tau-B. 
+    It is only sensible in the case of two dichotomous variables, and then 
+    CramerV, which is also reported by default, has the same value.
+  * CourseData() will open xl-datafiles containing a description tab and 
+    define factors based on this information, as well as set labels.
+  * DunnetTest will no longer set.seed() within the function, which was used
+    to generate comparable results, but was a drawback for simulations.
+    (Credits to marcoegv on github)
   
 BUGFIXES:
   * JonckheereTest's formula interface will now also support additional 
